--- a/mysql/.my.cnf
+++ b/mysql/.my.cnf
@@ -2,8 +2,9 @@
 default-character-set = utf8
 
 [mysqld]
-#slow_query_log = /var/log/slow-queries-log.log
-#long_query_time = 0.1
+slow_query_log = 1
+slow_query_log_file = /Users/dieterprovoost/slow-queries.log
+long_query_time = 0.3
 #character-set-database = utf8
 character_set_server = utf8 
 #collation-server = utf8_general_ci
